chapter-ambient-observability/manifests/apisix-plugins.yaml
# APISIX Service with ExternalName pointing to Istio services
# This enables APISIX to route to services in the Istio mesh
apiVersion: v1
kind: Service
metadata:
  name: bookinfo-productpage
  namespace: apisix
spec:
  type: ExternalName
  externalName: productpage.bookinfo.svc.cluster.local
  ports:
    - port: 9080
---
apiVersion: v1
kind: Service
metadata:
  name: bookinfo-reviews
  namespace: apisix
spec:
  type: ExternalName
  externalName: reviews.bookinfo.svc.cluster.local
  ports:
    - port: 9080
---
apiVersion: v1
kind: Service
metadata:
  name: bookinfo-ratings
  namespace: apisix
spec:
  type: ExternalName
  externalName: ratings.bookinfo.svc.cluster.local
  ports:
    - port: 9080
---
apiVersion: v1
kind: Service
metadata:
  name: bookinfo-details
  namespace: apisix
spec:
  type: ExternalName
  externalName: details.bookinfo.svc.cluster.local
  ports:
    - port: 9080
